--- a/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
@@ -8,18 +8,18 @@
         Click here to setup your free account and get going!
     </a>
 </p>
-
+<br/>
 <div>
     <div>
         <small>
-            <a href="#" class="muted" onclick="$(this).children().toggleClass('fa-caret-right fa-caret-down').parent().parent().parent().next().slideToggle('fast')"><i class="fa fa-caret-right"></i> Advanced options</a>
+            <a href="#" class="muted" onclick="$(this).children().toggleClass('fa-caret-right fa-caret-down').parent().parent().parent().next().slideToggle('fast')"><i class="fa fa-caret-right"></i> Advanced</a>
         </small>
     </div>
     <div class="hide">        
         <div class="control-group">
             <label class="control-label" style="padding-top:20px;">Your Printer Id:</label>
             <div class="controls">
-                <input type="text" class="input-block-level" data-bind="value: settings.plugins.octoeverywhere.PrinterKey" disabled>
+                <b><span data-bind="text: settings.plugins.octoeverywhere.PrinterKey"></span></b>
             </div>
         </div>        
     </div>
