:sparkles: Add setup wizard

--- a/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
@@ -1,7 +1,9 @@
 <h3>OctoEverywhere!</h3>
 
-<p>Hello! 👋</p>
+<h4>Hello! 👋</h4>
 
-<p>You're two minutes away from being able to access your OctoPrint instance from anywhere!</p>
+<p>You're two minutes away from being able to access your OctoPrint instance from anywhere.</p>
 
-<p>To complete the setup, check to the OctoEverywhere settings page in the OctoPrint settings!</p>
+<p>To complete the setup, click the link below to register with <strong>OctoEverywhere</strong>:</p>
+
+<a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: printerURL() } ">Connect to OctoEverywhere <i class="fa fa-external-link"></i></a>
