Squashing down previous commits!

--- a/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
@@ -1,25 +1,24 @@
 <h3>OctoEverywhere!</h3>
 
-<p style="padding-bottom:10px"><a href="https://octoeverywhere.com">OctoEverywhere.com</a> allows you to access your full OctoPrint interface, controls, cameras, and plugins from anywhere! On your laptop, phone, or your favorite OctoPrint app!</p>
+<p style="padding-bottom:10px">Blast off 🚀 with <a href="https://octoeverywhere.com">OctoEverywhere.com</a>! Access this full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite 3rd OctoPrint apps!</p>
+
 <p style="padding-bottom:10px">OctoEverywhere! is <b>free, secure, and super easy to setup!</b></p>
 
 <p>
-    <a data-bind="attr: { href: settings.plugins.octoeverywhere.AddPrinterUrl }">
-        Click here to setup your free account and get going!
-    </a>
+    <a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: settings.plugins.octoeverywhere.AddPrinterUrl } ">Finish Your Two Minute Setup Now!&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
 </p>
-
+<br/>
 <div>
     <div>
         <small>
-            <a href="#" class="muted" onclick="$(this).children().toggleClass('fa-caret-right fa-caret-down').parent().parent().parent().next().slideToggle('fast')"><i class="fa fa-caret-right"></i> Advanced options</a>
+            <a href="#" class="muted" onclick="$(this).children().toggleClass('fa-caret-right fa-caret-down').parent().parent().parent().next().slideToggle('fast')"><i class="fa fa-caret-right"></i> Advanced</a>
         </small>
     </div>
     <div class="hide">        
         <div class="control-group">
-            <label class="control-label" style="padding-top:20px;">Your Printer Id:</label>
+            <label class="control-label" style="padding-top:20px;">Your Printer Id: <strong>(don't share this!)</strong></label>
             <div class="controls">
-                <input type="text" class="input-block-level" data-bind="value: settings.plugins.octoeverywhere.PrinterKey" disabled>
+                <span data-bind="text: settings.plugins.octoeverywhere.PrinterKey"></span>
             </div>
         </div>        
     </div>
