Adding a link to send help or feedback from the plugin settings.

--- a/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
@@ -8,6 +8,10 @@
     <a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: settings.plugins.octoeverywhere.AddPrinterUrl } ">Finish Your Two Minute Setup Now!&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
 </p>
 <br/>
+<p>
+    <a href="https://octoeverywhere.com/support">Need help or want to send feedback?</a>
+</p>
+<br/>
 <div>
     <div>
         <small>
