Updating the settings and wizard UI!

--- a/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
@@ -1,8 +1,11 @@
-<h3>OctoEverywhere!</h3>
+<div style="display: flex; align-items: center; justify-content: center; flex-direction:column; margin-bottom:30px;">
+    <img src="https://octoeverywhere.com/img/logo.png" height="80px" width="80px" />
+    <h3>OctoEverywhere!</h3>
+</div>
 
-<p style="padding-bottom:10px">Blast off 🚀 with <a href="https://octoeverywhere.com">OctoEverywhere.com</a>! Access this full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite 3rd OctoPrint apps!</p>
+<p style="padding-bottom:10px">Blast off 🚀 with <a href="https://octoeverywhere.com">OctoEverywhere.com</a>! Access your full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite OctoPrint apps!</p>
 
-<p style="padding-bottom:10px">OctoEverywhere! is <b>free, secure, and super easy to setup!</b></p>
+<p style="padding-bottom:10px">OctoEverywhere is <b>free, secure, and super easy to setup!</b></p>
 
 <p>
     <a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: settings.plugins.octoeverywhere.AddPrinterUrl } ">Finish Your Two Minute Setup Now!&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
