--- a/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
@@ -1,13 +1,18 @@
-<h3>Blast Off With OctoEverywhere!</h3>
+<div style="display: flex; align-items: center; justify-content: center; flex-direction:column; margin-bottom:30px;">
+    <img src="https://octoeverywhere.com/img/logo.png" height="80px" width="80px" />
+    <h3>OctoEverywhere!</h3>
+</div>
 
-<h4>Hello! 👋</h4>
+<p>You're <strong>one minute</strong> away from free and secure access to your OctoPrint from anywhere!</p>
 
-<br/>
+<p>OctoEverywhere empowers you with access to your full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite OctoPrint apps!</p>
 
-<p>You're two minutes away from being able to access your OctoPrint instance from anywhere!</p>
+<a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: printerURL() } " style="padding:10px; padding-left:45px; padding-right:45px; margin-top:15px;">Complete Your Setup Now!</a>
 
-<p>To complete the setup, click the link below to register with OctoEverywhere. You can also complete the setup at anytime by following the link in the OctoPrint settings under OctoEverywhere.</p>
+<div style="margin-top:30px;">
+    Busy now? You can find the button to complete your setup at anytime in the OctoPrint settings under the OctoEverywhere tab.
+</div>
 
-<br/>
-
-<a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: printerURL() } ">Complete Your Setup Now!&nbsp;&nbsp;<i class="fa fa-external-link"></i></a>
+<div style="margin-top:30px;">
+    Having Trouble? We are more than happy to help, <a target="_blank" href="https://octoeverywhere.com/support">get in touch</a>.
+</div>
