--- a/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
@@ -1,6 +1,6 @@
 <div style="display: flex; align-items: center; justify-content: center; flex-direction:column; margin-bottom:30px;">
     <img src="https://octoeverywhere.com/img/logo.png" height="80px" width="80px" />
-    <h3>OctoEverywhere!</h3>
+    <h3>OctoEverywhere</h3>
 </div>
 
 <p>You're <strong>one minute</strong> away from free and secure access to your OctoPrint from anywhere!</p>
