Small wording change.

--- a/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
@@ -3,7 +3,7 @@
     <h3>OctoEverywhere</h3>
 </div>
 
-<p>You're <strong>one minute</strong> away from free and secure access to your OctoPrint from anywhere!</p>
+<p>You're <strong>less than one minute</strong> away from free and secure access to your OctoPrint from anywhere!</p>
 
 <p>OctoEverywhere empowers you with access to your full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite OctoPrint apps!</p>
 
