--- a/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_settings.jinja2
@@ -1,6 +1,6 @@
 <!-- Common Header -->
 <div style="display: flex; align-items: center; justify-content: center; flex-direction:column; margin-bottom:30px;">
-    <img src="https://octoeverywhere.com/img/logo.png" height="80px" width="80px" />
+    <img src="https://octoeverywhere.com/img/logo.png" height="90px" width="90px" />
     <h3>OctoEverywhere</h3>
 </div>
 
@@ -15,12 +15,11 @@
 
 <!-- Printer Setup UI -->
 <div id="octoeverywhere-setup-complete" style="display:none">
-    <p style="padding-bottom:5px"><b>✅ Your printer is connected and ready to go!</b></p>
-    <p style="padding-bottom:5px">You can access your printer anytime, anywhere, on any device at <a target="_blank" href="https://octoeverywhere.com/dashboard?source=plugin_settings">OctoEverywhere.com</a></p>
+    <p style="">✅ Your printer is connected and ready to go!</p>
+    <p style="">You can access your printer anytime, anywhere, on any device at <a target="_blank" style="color:white;text-decoration:underline" href="https://octoeverywhere.com/dashboard?source=plugin_settings">OctoEverywhere.com</a></p>
 
-    <p style="padding-bottom:5px;padding-top:20px;"><b>Did you know....</b> you can empower your favorite apps to work anywhere?!?</p>
-    <p style="padding-bottom:5px">Experience the full power of your favorite OctoPrint app from anywhere, including full frame rate and full resolution webcam streaming. <b>Try it now, it takes less than 30 seconds to setup!</b></p>
-
+    <p style="padding-bottom:5px;padding-top:30px;font-size:24px;color:#78a4fa">Your Favorite OctoPrint Apps Work Anywhere</p>
+    <p style="padding-bottom:10px">Experience the full power of your favorite OctoPrint app from anywhere, including full frame rate and full resolution webcam streaming. <b>Try it now, it takes less than 30 seconds to setup!</b></p>
     <div style="display:flex; align-items:center; justify-content:center;">
         <div style="display:flex; flex-direction:row">
             <div class="oe-appBox">
@@ -70,10 +69,16 @@
         </div>
     </div>
 
-    <p style="padding-bottom:5px;padding-top:50px;"><b style="color:#78a4fa">NEW! Free and Instant Printer Notifications</b><br/>Setup alerts for print progress, print completion, print errors, filament changes, and so more!</p>
-    <p style="padding-bottom:5px">Our notifications include a wealth of information and high-resolution screenshots. We can send you notifications via <b>Email, SMS, Discord, Telegram, Windows, Mac, Android, Slack, Pushover, and Pushbullet.</b></p>
+    <p style="padding-bottom:5px;padding-top:50px;font-size:24px;color:#78a4fa">Free & Unlimited AI Print Failure Detection</p>
+    <p style="padding-bottom:5px"><strong>Say hello to Gadget!</strong> Gadget uses state-of-the-art machine learning algorithms to continuously monitor your prints and take action when many common printing failures are detected. We are proud to offer Gadget free and unlimited for the entire maker community.</p>
     <p style="margin-bottom:20px">
-        <a class="btn btn-primary" target="_blank" href="https://octoeverywhere.com/notifications?source=plugin_settings">Setup Your Notifications Now!</a>
+        <a class="btn btn-primary" target="_blank" href="https://octoeverywhere.com/gadget?source=plugin_settings">Enable Gadget Now</a>
+    </p>
+
+    <p style="padding-bottom:5px;padding-top:30px;font-size:24px; color:#78a4fa">Free & Instant Printer Notifications</p>
+    <p style="padding-bottom:5px;">Setup alerts for print progress, print completion, print errors, filament changes, and so more! Our notifications include a wealth of information and high-resolution screenshots. We can send you notifications via <b>Email, SMS, Discord, Telegram, Windows, Mac, Android, Slack, Pushover, Pushbullet, and WebHooks.</b></p>
+    <p style="margin-bottom:20px">
+        <a class="btn btn-primary" target="_blank" href="https://octoeverywhere.com/notifications?source=plugin_settings">Setup Your Notifications Now</a>
     </p>
 </div>
 
