--- a/moonraker_octoeverywhere/static/oe-ui.css
+++ b/moonraker_octoeverywhere/static/oe-ui.css
@@ -54,11 +54,11 @@
 }
 
 .oe-popup-button {
-    width: 100%;
-    align-self: last baseline;
+    flex-grow: 1;
     text-align: center;
     padding: 6px;
     margin-bottom: 12px;
+    font-size: 16px;
 
     color: white;
     background-color: #3F5682;
