--- a/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
+++ b/octoprint_octoeverywhere/templates/octoeverywhere_wizard.jinja2
@@ -3,16 +3,35 @@
     <h3>OctoEverywhere</h3>
 </div>
 
-<p>You're <strong>less than one minute</strong> away from free and secure access to your OctoPrint from anywhere!</p>
+<h4>Welcome to the OctoEverywhere 🥰</h4>
 
-<p>OctoEverywhere empowers you with access to your full OctoPrint portal, printer controls, camera streams, and plugins from anywhere! OctoEverywhere works on your desktop, laptop, tablet, phone, and your favorite OctoPrint apps!</p>
+<p style="padding-top:10px;"><strong>In less than 20 seconds, you will have access to:</strong></p>
 
-<a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: printerURL() } " style="padding:5px; padding-left:45px; padding-right:45px; margin-top:15px;">Complete Your Setup Now!</a>
+<ul class="supporterAskPopUpText" style="padding-left:0px; padding-top:10px; list-style:none; margin-top:-10px;">
+    <li>🚀 Free & Unlimited Remote Access</li>
+    <li>🤖 Free & Unlimited AI Print Failure Detection</li>
+    <li>🎥 Full Framerate Webcam Streaming</li>
+    <li>🔔 Print Notifications Via Push, Telegram, Discord, Email, SMS, & More</li>
+    <li>📱 Android & iPhone App Remote Access</li>
+    <li>🧵 Spoolman Remote Access</li>
+    <li>🤝 Shared Connections</li>
+    <li>🔥 Live Streaming</li>
+    <li>🙌 So Much More</li>
+</ul>
+
+<a class="btn btn-primary" target="_blank" href="" data-bind="attr: { href: printerURL() } " style="padding:5px; padding-left:45px; padding-right:45px; margin-top:15px;">Complete Your OctoEverywhere Setup Now</a>
 
 <div style="margin-top:30px;">
-    Busy now? You can find the button to complete your setup at anytime in the OctoPrint settings under the OctoEverywhere tab.
+    <p><strong>Join Our Community! 👋</strong></p>
+    <a target="_blank" href="https://octoeverywhere.com/r/discord?source=octoprint_welcome_wizard">Join our Discord community</a> of beginners, advanced makers, and everyone in between. Share models, ask questions, and chat with fellow OctoPrint makers!
 </div>
 
 <div style="margin-top:30px;">
-    Having Trouble? We are more than happy to help, <a target="_blank" href="https://octoeverywhere.com/support">get in touch</a>.
+    <p><strong>Gotta Run? 🏃‍➡️</strong></p>
+    <p>You can finish the OctoEverywhere setup from the OctoPrint settings under the OctoEverywhere tab.</p>
+</div>
+
+<div style="margin-top:30px;">
+    <p><strong>Need Help? 🤔</strong></p>
+    <a target="_blank" href="https://octoeverywhere.com/support?source=octoprint_welcome_wizard">Contact our team via our support system</a> and we will be happy to help!
 </div>
